--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -1,11 +1,11 @@
 @page "/projects/{Id}"
-@inject HttpClient Http
-@inject NavigationManager navigationManager
-@inject DialogService DialogService
+@inject HttpClient _http
+@inject NavigationManager _navigationManager
+@inject DialogService _dialogService
 @inject NotificationService _notificationService;
 @inject NavigationManager _uriHelper;
-@inject AuthenticationStateProvider AuthenticationStateProvider
-@inject ProjectStateChanged projectChanged;
+@inject AuthenticationStateProvider _authenticationStateProvider
+@inject ProjectStateChanged _projectChanged;
 
 <RadzenDialog />
 <RadzenNotification/>
@@ -32,7 +32,7 @@ else
                         }
                 </div>
             <h3 class="h5" style="color:black;">Project title: "@_project?.Title":</h3>
-            <h4 style="color:black;">Authored by: <x onclick="@(() => navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
+            <h4 style="color:black;">Authored by: <x onclick="@(() => _navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
                  <h5 style="color:black;"> (Role: @_role) </h5>
             </h4>
             <div class="d-flex flex-row">
@@ -90,8 +90,8 @@ else
 
     protected override void OnInitialized()
     {
-        DialogService.OnOpen += Open;
-        DialogService.OnClose += Close;
+        _dialogService.OnOpen += Open;
+        _dialogService.OnClose += Close;
     }
 
     void Open(string title, Type type, Dictionary<string, object> parameters, DialogOptions options)
@@ -111,16 +111,16 @@ else
     }
 
     protected override async Task OnInitializedAsync(){
-        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
         var user = authState.User;
         if (user.Identity?.IsAuthenticated == true)
         {
-            var _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
+            var _user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
             if (_user != null){
-                var _claims = _user.Claims;
+                var claims = _user.Claims;
                 _name = _user.Identity?.Name;
                 _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
-                var account = await Http.GetFromJsonAsync<AccountDetailsDto>($"/api/Account/{_aToken}");
+                var account = await _http.GetFromJsonAsync<AccountDetailsDto>($"/api/Account/{_aToken}");
                 if (account != null)
                 {
                     _likedProjects = account.SavedProjects.ToList();
@@ -132,30 +132,26 @@ else
     protected override async Task OnParametersSetAsync()
     {
         try {
-            _project = await Http.GetFromJsonAsync<ProjectDetailsDto>("/api/Project/"+Id);
+            _project = await _http.GetFromJsonAsync<ProjectDetailsDto>("/api/Project/"+Id);
             _lastUpdated = DateTime.UtcNow - _project.LastUpdated;
         } catch {
             _project = null;
         }
-          if(_project.AuthorName.Length >15){
-                    _role = "Student";
-            } else{
-                _role = "Supervisor";
-            }
+        _role = _project.AuthorName.Length >15 ? "Student" : "Supervisor";
     }
    
     async Task ShowCloseableFromOverlayDialogContact()
     {
-        var _email =_project.AuthorName.ToString()+"@gmail.com";
-        _email =_email.Replace(" ", String.Empty);
-        await DialogService.OpenAsync("", ds =>
+        var email =_project.AuthorName.ToString()+"@gmail.com";
+        email =email.Replace(" ", String.Empty);
+        await _dialogService.OpenAsync("", ds =>
         @<div style="color:black;">
             <div>
             <h2 style="color:black;">Author Information</h2> </div>
         <div>
             Name: @_project.AuthorName</div> 
         <div> 
-            Email: @_email</div>
+            Email: @email</div>
         <div>
             <RadzenTextArea Placeholder="Write message" Style="height:75px;width:300px"/>
           <div>
@@ -168,7 +164,7 @@ else
 
     async Task ShowCloseableFromOverlayDialogRequest()
     {
-        await DialogService.OpenAsync("", ds =>
+        await _dialogService.OpenAsync("", ds =>
         @<div style="color:black;">
             <div>
             <h2 style="color:black;">Request supervision</h2> </div>
@@ -188,14 +184,14 @@ else
     {
         if (_likedProjects.Contains(t))
         {
-            await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", t);
-            projectChanged.RemoveSavedProjects(t);
+            await _http.PutAsJsonAsync($"api/Account/{_aToken}/remove", t);
+            _projectChanged.RemoveSavedProjects(t);
             _likedProjects.Remove(t);
         }
         else
         {
-            await Http.PostAsJsonAsync($"api/Account/{_aToken}", t);
-            projectChanged.AddSavedProjects(t);
+            await _http.PostAsJsonAsync($"api/Account/{_aToken}", t);
+            _projectChanged.AddSavedProjects(t);
             _likedProjects.Add(t);
         }
     }
