--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -143,7 +143,7 @@
         }
         else
         {
-            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{_searchText}/{(int) model.Selected}");
+            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{_searchText}/{model.Selected}");
         }
 
         await InvokeAsync(StateHasChanged);
@@ -152,7 +152,7 @@
     //TODO opdater det her, så dataet på hjemmesiden bliver loaded på første klik
     async Task Enter(KeyboardEventArgs e)
     {
-        if (e.Code == "Enter" || e.Code == "NumpadEnter")
+        if (e.Code is "Enter" or "NumpadEnter")
         {
             await LoadProjects();
         }
@@ -161,7 +161,7 @@
     private IEnumerable<string> _likedProjects = null!;
     private string? _aToken;
 
-    protected async Task OnChange()
+    private async Task OnChange()
     {
         var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
         var user = authState.User;
@@ -202,13 +202,6 @@
 
     private void dropdown()
     {
-        if (_isDropedDown)
-        {
-            _isDropedDown = false;
-        }
-        else
-        {
-            _isDropedDown = true;
-        }
+        _isDropedDown = !_isDropedDown;
     }
 }
