fix merge error

--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -1,4 +1,4 @@
-@page "/swipe/{keyword}"
+@page "/swipe/{keyword}/{degreeInt:int}"
 @inject HttpClient Http
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
