--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -103,7 +103,7 @@
 </AuthorizeView>
 
 @code {
-    private IEnumerable<string> favorites = null!;
+    private IEnumerable<string> _favorites = null!;
 
    
     private string _role;
