--- a/ProjectBank/Client/Pages/MyProfile.razor
+++ b/ProjectBank/Client/Pages/MyProfile.razor
@@ -78,7 +78,7 @@ else
     private string? _currentRole;
     private string? _azureAdtoken;
     private AccountDetailsDto? _account;
-    private bool isProject = false;
+    private bool _isProject = false;
     ProjectDetailsDto[]? _projects;
     private readonly List<ProjectDetailsDto?> _userProjects = new List<ProjectDetailsDto?>();
 
