--- a/ProjectBank/Client/Shared/PdfUploader.razor
+++ b/ProjectBank/Client/Shared/PdfUploader.razor
@@ -10,9 +10,13 @@
         @if (!string.IsNullOrWhiteSpace(fileUrl))
         {
             <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><a style="color: #0a53be" href="@fileUrl" download="@fileName">Preview file</a></div>
-            <RadzenButton style="width: 160px;" Icon="save" BusyText="Saving ..." IsBusy=@busy Click=@UploadFile Text="Upload" />
-            <RadzenButton style="width: 160px;" IsBusy=@busy Click=@ClearFile Text="Clear" />
-            
+            <div style="padding: 0.5em; display: grid; grid-template-columns: 50% 50%; text-align: center">
+                <RadzenButton style="width: 90%; text-align: center; background: linear-gradient(10deg, #fd297b, #ff655b)" 
+                              BusyText="Saving ..." IsBusy=@busy Click=@UploadFile Text="Upload"/>
+                <RadzenButton style="width: 90%; text-align: center; background: linear-gradient(10deg, #fd297b, #ff655b)" 
+                              IsBusy=@busy Click=@ClearFile Text="Clear"/>
+            </div>
+
         }@if (sizeExceeded)
          {
              <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
