--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -15,11 +15,11 @@
 }
 else
 {
+    <RadzenFieldset class="mb-4" Style="border: none">  
     <div class="row my-4">
-        <RadzenCard class="m-6 project_card">
-            <div class="project_card_content">
-            <div class="radzen_card_projects">
-                <div class="like_star">
+    <div class="project_card_content">
+                <div class="radzen_card_projects">
+                    <div class="like_star">
                         @if (_likedProjects.Contains(_project.Title))
                         {
                             <input type="checkbox" class="star_checkbox" id="star_checkbox_@_project.Id" checked="checked" @onchange="() => AddOrRemoveFavorite(_project.Title)"/>
@@ -30,52 +30,60 @@ else
                             <input type="checkbox" class="star_checkbox" style="color: #1a1e21" id="star_checkbox_@_project.Id" unchecked="true" @onchange="() => AddOrRemoveFavorite(_project.Title)"/>
                             <label class="oi oi-star" id="star_@_project.Id" for="star_checkbox_@_project.Id"></label>
                         }
-                </div>
-            <h3 class="h5" style="color:black;">Project title: "@_project?.Title":</h3>
-            <h4 style="color:black;">Authored by: <x onclick="@(() => navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
-                 <h5 style="color:black;"> (Role: @_role) </h5>
-            </h4>
-            <div class="d-flex flex-row">
-                <div>
-                    <b style="color:black;">Project description:</b>
-                    <div style="color:black;">@(_project?.Description)</div>
-                    @if (_project?.ImageUrl != null)
-                    {
-                        <div><img class="card-img-top" src=@_project.ImageUrl alt="Project image"></div>
-                    }
-                    <b style="color:black;">Degree:</b>
-                    <div style="color:black;">@(_project?.Degree)</div>
-                    <b style="color:black;">ECTS:</b>
-                    <div style="color:black;">@(_project?.Ects)</div>
-                    <b style="color:black;">Last updated:</b>
-                    @if (_lastUpdated.Days > 0){<div style="color:black;">@(_lastUpdated.Days) day(s) ago</div>}else if (_lastUpdated.Hours > 0){<div style="color:black;">@(_lastUpdated.Hours) hour(s) ago</div>}else if (_lastUpdated.Minutes > 0){<div style="color:black;">@(_lastUpdated.Minutes) minute(s) ago</div>}else{<div style="color:black;">@(_lastUpdated.Seconds) seconds ago</div>}
-                    <b style="color:black;">Tags:</b>
-                    <div style="color:black;">@if (_project != null){foreach (var keyword in _project.Keywords)
-                    {
-                        <div>@keyword</div>
-                    }}
-                        <div style="color:blue;">
-                            @if (_project?.FileUrl != null)
+                    </div>
+                    <h3 class="h6" style="color:black;">Project title: "@_project?.Title":</h3>
+                    <h6 style="color:black;">Authored by: <x onclick="@(() => navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
+                        <br><h7 style="color:black;"> (Role: @_role) </h7>
+                    </h6>
+                    <div class="d-flex flex-row">
+                        <div>
+                            <b style="color:black;">Project description:</b>
+                            <div style="color:black;">
+                                @(_project?.Description)
+                            </div>
+                            @if (_project?.ImageUrl != null)
                             {
-                                <a href="@_project.FileUrl" download="@_project.Title??.pdf">@_project.Title .pdf</a>
+                                <div><img class="card-img-top" style="width: 63%" src=@_project.ImageUrl alt="Project image"></div>
                             }
-                   <h4 style="color:black;">______________________________</h4> 
+                            <b style="color:black;">Degree:</b>
+                            <div style="color:black;">@(_project?.Degree)</div>
+                            <b style="color:black;">ECTS:</b>
+                            <div style="color:black;">@(_project?.Ects)</div>
+                            <b style="color:black;">Last updated:</b>
+                            @if (_lastUpdated.Days > 0){<div style="color:black;">@(_lastUpdated.Days) day(s) ago</div>}else if (_lastUpdated.Hours > 0){<div style="color:black;">@(_lastUpdated.Hours) hour(s) ago</div>}else if (_lastUpdated.Minutes > 0){<div style="color:black;">@(_lastUpdated.Minutes) minute(s) ago</div>}else{<div style="color:black;">@(_lastUpdated.Seconds) seconds ago</div>}
+                            <b style="color:black;">Tags:</b>
+                            <div style="color:black;">@if (_project != null){foreach (var keyword in _project.Keywords)
+                                                      {
+                                                          <div>@keyword</div>
+                                                      }}
+                                <div style="color:blue;">
+                                    @if (_project?.FileUrl != null)
+                                    {
+                                        <a href="@_project.FileUrl" download="@_project.Title??.pdf">@_project.Title .pdf</a>
+                                    }
+                                </div> 
+                            </div>
+                            <br>
+                            <div style="color: black; display: flex; justify-items: center; justify-content: center; width: 99%;">
+                                <h3 style="display: flex">_____________</h3>
+                            </div>                                <br>
+                                <div style="display: flex; justify-items: center; justify-content: center" >
+                                    @if (_project.AuthorName == _name){
+                                        <RadzenButton style="width: 250px; background: linear-gradient(10deg, #fd297b, #ff655b)" Icon="accessibility" BusyText="Saving ..." Text="Share project idea" Click=@ShowCloseableFromOverlayDialogRequest/>
+                                    } else {
+                                        <div style="display: grid; grid-template-columns: 50% 50%">
+                                            <RadzenButton style="width: 7em; background: linear-gradient(10deg, #fd297b, #ff655b); margin-right: 1em;" BusyText="Saving ..." Text="Apply" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "placeholder", Duration = 4000 }))" />  
+                                            <RadzenButton style="width: 7em; background: linear-gradient(10deg, #fd297b, #ff655b)" BusyText="Saving ..." Text="Contact" Click=@ShowCloseableFromOverlayDialogContact />
+                                        </div>
+                                    }
+                                </div>
+                            <br/>
                         </div>
-                        @if (_project.AuthorName == _name){
-                        <RadzenButton style="width: 250px" Icon="accessibility" BusyText="Saving ..." Text="Share project idea" Click=@ShowCloseableFromOverlayDialogRequest/>
-                        } else {
-                        <RadzenButton style="width: 160px" Icon="favorite" BusyText="Saving ..." Text="Apply" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "placeholder", Duration = 4000 }))" />   
-                        <RadzenButton style="width: 250px" Icon="accessibility" BusyText="Saving ..." Text="Contact Author" Click=@ShowCloseableFromOverlayDialogContact/>
-                        }
-                        
-
                     </div>
                 </div>
-                </div>
             </div>
-            </div>
-        </RadzenCard>
     </div>
+</RadzenFieldset>
 }
 
 @code {
